--- a/backend/css/landing_form.css
+++ b/backend/css/landing_form.css
@@ -43,7 +43,7 @@ body{
 #import_form .text_field:focus{background-color:#f9f8e4}ul.errors{margin:0 0 25px 0;padding:15px 15px 5px 15px;background:url('/images/form_error_bg.png') bottom left repeat-x #ef858d;font-family:Arial,Helvetica,Verdana,sans-serif;font-size:18px;font-weight:normal;color:#631110;border-top:1px solid #7d454a;border-left:1px solid #ce7076;border-right:1px solid #ce7076;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px}ul.errors li{margin:0 0 10px 0}#content .blue_note{position:relative;top:-50px}#footer{margin-top:-80px}
 .big_button {
     -moz-border-radius: 5px 5px 5px 5px;
-    background: url("/images/big_button_bg.png") repeat-x scroll center top #87B500;
+    background: repeat-x scroll center top #87B500;
     border-color: #DDDDDD #689300 #689300 #DDDDDD;
     border-style: solid;
     border-width: 0 1px 1px 0;
@@ -61,8 +61,8 @@ body{
         width:490px;
         margin:0 auto;
         margin-left: 10px;
-        padding:20px 20px;
-        background: url("/images/big_button_bg.png") repeat-x scroll center top #87B500;
+	padding:20px 20px;
+	background: scroll center top #87B500;
         border-color: #DDDDDD #689300 #689300 #DDDDDD;
         border-style: solid;
         border-width: 0 1px 1px 0;
